# zed

assets/settings/: default.json
crates/collab/tests/integration/: editor_tests.rs
crates/editor/src/: editor.rs  element.rs  hover_links.rs  hover_popover.rs  split.rs
crates/editor/src/display_map/: block_map.rs
crates/editor/src/inlays/: inlay_hints.rs
crates/git_ui/src/: file_diff_view.rs
crates/language_onboarding/: Cargo.toml
crates/language_onboarding/src/: language_onboarding.rs  rust.rs  rust_tests.rs
crates/project_panel/src/: project_panel.rs
crates/settings_content/src/: settings_content.rs
crates/zed/src/: zed.rs
