[package]
name = "language_onboarding"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/language_onboarding.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
db.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
lsp.workspace = true
project.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
